--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,6 +23,22 @@ env:
 
 
 jobs:
+  sast-check_dependencies:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with: 
+          node-version: '18'
+      - run: npm install
+
+      - name: install and configure SNYK
+        run: sudo npm install -g snyk && snyk auth ${{ secrets.SNYK_TOKEN }}
+
+      - name: snyk scan for lib vulnerabilities (SAST)
+        run: sudo snyk test 
+        
   build-and-push:
 
     runs-on: ubuntu-latest
