--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Repositório para a reprodução do artigo científico sobre DevOps e DevSecOps",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +15,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "~4.2.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.2"
+    "mongoose": "^7.5.2",
+    "nodemon": "^3.0.1",
+    "swagger-ui-express": "^5.0.0"
   }
 }
