--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "swagger-autogen": "node api/swagger.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "project-run": "node api/swagger.js && node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +17,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "~4.2.2",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.5.2",
+    "mongoose": "^7.5.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.0.1",
+    "swagger-autogen": "^2.23.6",
     "swagger-ui-express": "^5.0.0"
   }
 }
