--- a/Back-end/package.json
+++ b/Back-end/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
-    "jsonwebtoken": "~4.2.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.2"
   },
