--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -10,6 +10,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-spring": "^9.7.3",
+    "react-spring-3d-carousel": "^1.3.4",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.3",
     "web-vitals": "^2.1.4"
   },
@@ -18,7 +22,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
