--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -61,7 +61,7 @@ jobs:
           pip install requests_html njsscan
 
       - name: Execute njsscan
-        run: njsscan ../back-end/
+        run: njsscan ./Back-end/
 
   dast-stackhawk:
     runs-on: ubuntu-latest
@@ -71,10 +71,10 @@ jobs:
 
       - name: create env file
         run: |
-          touch ./back-end/.env
+          touch ./Back-end/.env
 
       - name: start containers
-        run: docker-compose -f ./back-end/docker-compose.yml up -d
+        run: docker-compose -f ./Back-end/docker-compose.yml up -d
 
       - name: scan my app
         uses: stackhawk/hawkscan-action@v2.1.2
