--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -10,7 +10,7 @@ app:
 
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
   openApiConf:
-    path: /doc # OR...
+    path: http://localhost:3000/doc # OR...
 #     filePath: openApi.json
   autoPolicy: true
   autoInputVectors: true
