--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "",
   "name": "ru",
   "version": "0.1.0",
   "private": true,
@@ -48,7 +49,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0",
+    "gh-pages": "^6.1.0",
     "tailwindcss": "^3.3.5",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
