--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://joaovmour4.github.io/SR-DEVOPS/",
+  "homepage": "https://joaovmour4.github.io/SR-DEVOPS/Front-end/",
   "name": "ru",
   "version": "0.1.0",
   "private": true,
