--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -10,8 +10,8 @@ app:
 
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
   openApiConf:
-    path: /doc # OR...
-    # filePath: ./Back-end/api/swagger_output.json
+    # path: /doc # OR...
+    filePath: ./Back-end/api/swagger_output.json
   # autoPolicy: true
   # autoInputVectors: true
   # Configuration Docs: https://docs.stackhawk.com/hawkscan/configuration/
