--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -1,19 +1,19 @@
 # -- stackhawk configuration for SR-DEVOPS --
 app:
   # -- An applicationId obtained from the StackHawk platform. --
-  applicationId: 67bf89dc-ce0b-4cc7-9f08-08959d49dc78 # (required)
+  applicationId: dd74dec3-6791-4865-9e9a-79cf3d0e409c # (required)
   # -- The environment for the applicationId defined in the StackHawk platform. --
-  env: Production # (required)
+  env: Development # (required)
   # -- The url of your application to scan --
   host: http://localhost:3000 # (required)
 
 
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
   openApiConf:
-    # path: /doc # OR...
-    filePath: Back-end/api/swagger_output.json
-  # autoPolicy: true
-  # autoInputVectors: true
+    path: /doc # OR...
+#     filePath: openApi.json
+  autoPolicy: true
+  autoInputVectors: true
   # Configuration Docs: https://docs.stackhawk.com/hawkscan/configuration/
 
 # -- If Authenticated Scanning is needed, add here --
