--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -11,7 +11,7 @@ app:
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
   openApiConf:
     path: /doc # OR...
-#     filePath: openApi.json
+    filePath: ./Back-end/api/swagger_output.json
   autoPolicy: true
   autoInputVectors: true
   # Configuration Docs: https://docs.stackhawk.com/hawkscan/configuration/
