--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -10,7 +10,7 @@ app:
 
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
   openApiConf:
-    path: /doc # OR...
+    # path: /doc # OR...
     filePath: ./Back-end/api/swagger_output.json
   autoPolicy: true
   autoInputVectors: true
