--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -6,6 +6,19 @@ app:
   env: Development # (required)
   # -- The url of your application to scan --
   host: http://localhost:3000 # (required)
+  authentication: 
+    usernamePassword:
+      loginPath: /login
+      usernameField: userName
+      passwordField: userPassword
+      scanUsername: admin
+      scanPassword: password
+    tokenExtraction: 
+      type: TOKEN_PATH
+      value: user.jwtToken.token
+    tokenAuthorization: 
+      type: HEADER
+      value: Authorization
 
 
 # -- Customized Configuration for GraphQL/SOAP/OpenAPI, add here --
