--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -11,8 +11,8 @@ app:
       loginPath: /login
       usernameField: userName
       passwordField: userPassword
-      scanUsername: admin
-      scanPassword: password
+      scanUsername: "admin"
+      scanPassword: "password"
     tokenExtraction: 
       type: TOKEN_PATH
       value: user.jwtToken.token
