--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -11,7 +11,7 @@ app:
       loginPath: /login
       usernameField: userName
       passwordField: userPassword
-      scanUsername: admin
+      scanUsername: user
       scanPassword: password
       type: JSON
     tokenExtraction: 
