--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -11,8 +11,8 @@ app:
       loginPath: /login
       usernameField: userName
       passwordField: userPassword
-      scanUsername: user
-      scanPassword: password
+      scanUsername: any
+      scanPassword: any
       type: JSON
     tokenExtraction: 
       type: TOKEN_PATH
