--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "avatar-initials": "^6.0.0",
     "axios": "^1.6.2",
+    "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
