--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.2",
     "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
+    "mercadopago": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
