--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -18,6 +18,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
     "react-spring-3d-carousel": "^1.3.4",
