metodo de pagamento implementado

--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "avatar-initials": "^6.0.0",
     "axios": "^1.6.2",
+    "card-react": "^1.2.7",
     "jspdf": "^2.5.1",
     "jwt-decode": "^4.0.0",
     "mercadopago": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flip-toolkit": "^7.1.0",
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.18.0",
