--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -25,6 +25,7 @@
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
     "react-spring-3d-carousel": "^1.3.4",
+    "react-ui-cards": "^3.1.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.0.3",
     "util": "^0.12.5",
